<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/nomor_telp"
        android:imeOptions="actionNext"
        android:layout_toLeftOf="@+id/spinner_label"
        android:text=""
        />
    <Spinner
        android:id="@+id/spinner_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/labels"
        android:layout_toLeftOf="@+id/button_show"
        />
    <Button
        android:id="@+id/button_show"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="showText"
        android:text="@string/show"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/edit_input"
        android:layout_marginTop="12dp"
        >
        <RadioButton
            android:id="@+id/radio_p1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pil1"
            />
        <RadioButton
            android:id="@+id/radio_p2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pil2"
            />
        <RadioButton
            android:id="@+id/radio_p3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/pil3"
            />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/radio_group"
        android:layout_marginTop="150dp"
        android:onClick="showAlert"
        android:text="Alert"/>

    <TextView
        android:id="@+id/textPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:textStyle="bold"
        android:text="@string/text_number" />

</RelativeLayout>